--- a/index.html
+++ b/index.html
@@ -4,5 +4,8 @@
 
 layout: home
 title: Home
-banner: /assets/images/banners/home.jpg
+banner:
+  image: /assets/images/banners/home.jpg
+  background: "#000"
+  opacity: 0.85
 ---
